# continual-learning-env

./: .gitignore  README.md  pyproject.toml
.prime/: lab.json
configs/: rl-minimax-2.5.toml  rl.toml
docs/: continual_learning_loop.md  opencode_continual_learning.md
environments/opencode_continual_learning/: README.md  opencode_continual_learning.py  pyproject.toml  utils.py
environments/opencode_continual_learning/.prime/: .env-metadata.json
