[project]
name = "opencode-continual-learning"
description = "A continual learning environment for OpenCode"
tags = ["continual-learning", "opencode", "agent", "multi-turn"]
version = "0.1.1"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["opencode_continual_learning.py", "utils.py", "pyproject.toml"] 

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3
